# ENRE-x

./: README.md
enrex/: Constraint.py  Entity.py  PTypes.py  PyFormat.py  PyFormatUnit.py  PyStructure.py  Query.py  WorkFlow.py  evaluation.py
fixtures/java-cpp-JNI/: Method.yaml  MethodWithParams.yaml  basic.yaml  objectField.yaml  objectMethod.yaml
fixtures/java-cpp-JNI/Method/: Method.cpp  Method.java
fixtures/java-cpp-JNI/MethodWithParams/: JNI2.dll.gitignore  MethodWithParams.cpp  MethodWithParams.java
fixtures/java-cpp-JNI/basic/: JNIDemo.h  JNIDemo.java  TestJNI.cpp
fixtures/java-cpp-JNI/objectField/: PersonField.cpp  PersonField.dll.gitignore  PersonField.java
fixtures/java-cpp-JNI/objectMethod/: PersonMethod.cpp  PersonMethod.dll.gitignore  PersonMethod.java
fixtures/java-js-ScriptEngine/: basic.yaml
fixtures/java-js-ScriptEngine/basic/: ExecuJs.java  add.js  hello.js
fixtures/javascript-cpp-NAPI/: basic.yaml
fixtures/javascript-cpp-NAPI/basic/: CMakeLists.txt  binding.gyp  napi_example01.cpp  napi_example01.js
fixtures/js-cpp-nodegyp/: basic.yaml
fixtures/js-cpp-nodegyp/basic/: CMakeLists.txt  binding.gyp  index.js  main.cpp
fixtures/js-cpp-wasm/: readme.md
fixtures/js-cpp-wasm/basic/: basic.yaml  hello.c  hello.wasm  index.html  loader.js
fixtures/js-cpp-wasm/ccall/: basic.yaml
fixtures/js-cpp-wasm/cwrap/: bacis.yaml
fixtures/js-cpp-wasm/direct_call/: basic.yaml
fixtures/python-cpp-ctypes/: basic.yaml  get.yaml  post.yaml
fixtures/python-cpp-ctypes/basic/: hello.py  hellopy.cpp  hellopy.h
(+13 files in other folders)
